Fix some layout issues for window resizing and in chrome

--- a/booted/css/post.less
+++ b/booted/css/post.less
@@ -41,7 +41,8 @@
         background-repeat: no-repeat;
         background-position: center center;
         background-size: cover;
-        width: 545px;
+        max-width: 545px;
+        width: 100%;
         height: 12px;
         display: inline-block;
         margin: 25px 4px 0px 0px;
@@ -100,10 +101,9 @@
     //side controls attached to each post
     & .post-controls {
         position: absolute;
-        text-align: left;
-        right: -200px;
-        width: 200px;
-        top: 0px;
+        left: 100%;
+        width: auto;
+        top: 15px;
         background: none;
         opacity: 0;
 
@@ -127,6 +127,11 @@
 
             overflow: hidden;
             text-align: left;
+
+            float: left;
+            display: inline-block;
+            clear: both;
+            
             
             &:hover, &:active {
                 opacity: 1.0;
@@ -157,6 +162,17 @@
                 {
                     background-position: 0px -36px;
                 }
+            }
+        }
+    }
+
+    @media (max-width: 970px) {
+        #wrapper .post .post-controls {
+            left: none;
+            right: 16px;
+
+            .btn {
+                float: right;
             }
         }
     }
